feat: Better performance

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -6,8 +6,9 @@ html {
 
 html {
 	min-height: 100%;
+	height: 100%;
 }
 
 body {
-	@apply dark:bg-surface-800 bg-surface-100;
+	@apply dark:bg-surface-800 bg-surface-100 w-full overflow-x-clip h-fit;
 }
